force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/DU_RemunerationPercentageSetting__mdt.object-meta.xml
<CustomObject>
    <description>Effort based remuneration - settings used by automated logic to populated percentages on Opportunity based on opportunity Signature date</description>
    <label>Remuneration Percentage Setting</label>
    <pluralLabel>Remuneration Percentage Settings</pluralLabel>
</CustomObject>