force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/fields/DU_ApplicationPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_ApplicationPercentage__c</fullName>
    <description>Effort based remuneration - Application percentage</description>
    <label>Application Percentage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>