force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/fields/DU_HandoverPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_HandoverPercentage__c</fullName>
    <description>Effort based remuneration - Handover percentage</description>
    <label>Handover Percentage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>