force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/fields/DU_LeadGenerationPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_LeadGenerationPercentage__c</fullName>
    <description>Effort based remuneration - Lead Generation percentage</description>
    <label>Lead Generation Percentage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>