force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/fields/DU_OfferPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_OfferPercentage__c</fullName>
    <description>Effort based remuneration - Offer percentage</description>
    <label>Offer Percentage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>