force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/fields/DU_SignaturePercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_SignaturePercentage__c</fullName>
    <description>Effort based remuneration - Signature percentage</description>
    <label>Signature/Contract Percentage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>