force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/fields/DU_ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>DU_ValidFrom__c</fullName>
    <description>Effort based remuneration - start date of validity of settings (this date included)</description>
    <inlineHelpText>Effort based remuneration - start date of validity of settings (this date included)</inlineHelpText>
    <label>Valid From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>