force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/fields/DU_ValidTo__c.field-meta.xml
<CustomField>
    <fullName>DU_ValidTo__c</fullName>
    <description>Effort based remuneration - end date of validity of settings (this date included)</description>
    <inlineHelpText>Effort based remuneration - end date of validity of settings (this date included)</inlineHelpText>
    <label>Valid To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>