force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/validationRules/Total100Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Total100Percent</fullName>
    <active>true</active>
    <description>Effort based remuneration - the total of assigned percentages has to be 100</description>
    <errorConditionFormula>(
					BLANKVALUE(DU_LeadGenerationPercentage__c, 0) +
					BLANKVALUE(DU_OfferPercentage__c, 0) +
					BLANKVALUE(DU_ApplicationPercentage__c, 0) + 
					BLANKVALUE(DU_HandoverPercentage__c, 0) + 
					BLANKVALUE(DU_SignaturePercentage__c, 0)
) != 1</errorConditionFormula>
    <errorMessage>Percentages for all process steps must sum up to 100%</errorMessage>
</ValidationRule>