force-app/main/default/objects/DU_RemunerationPercentageSetting__mdt/listViews/DU_RemunerationSettings.listView-meta.xml
<ListView>
    <fullName>DU_RemunerationSettings</fullName>
    <columns>MasterLabel</columns>
    <columns>DU_ValidFrom__c</columns>
    <columns>DU_ValidTo__c</columns>
    <columns>DU_LeadGenerationPercentage__c</columns>
    <columns>DU_OfferPercentage__c</columns>
    <columns>DU_ApplicationPercentage__c</columns>
    <columns>DU_SignaturePercentage__c</columns>
    <columns>DU_HandoverPercentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Remuneration Settings</label>
</ListView>